test/LitTests/SemanticAnalysis/Alias/DuplicateAlias.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s
// XFAIL: *

using Test0 = void;

// CHECK: .loci:8:1: error: alias 'Test0' clashes with existing name
using Test0 = void;

import {
	class Test1 { }
}

// CHECK: .loci:15:1: error: alias 'Test1' clashes with existing name
using Test1 = void;

class Test2() { }

// CHECK: .loci:20:1: error: alias 'Test2' clashes with existing name
using Test2 = void;

void Test3() { }

// CHECK: .loci:25:1: error: alias 'Test3' clashes with existing name
using Test3 = void;

// CHECK: 4 errors generated.
